--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Account/Login.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Account/Login.cshtml
@@ -1,5 +1,28 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model LoginVm
+
+	<!-- Login modal -->
+<div>
+	<div >
+		<div class="modal-content modal-popup">
+		<H1>Login</H1>
+			<a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+			<form action="#" class="popup-form" method="post" id="myLogin">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="login_icon"><i class="icon_lock_alt"></i></div>
+				<label asp-for="UserNameOrEmail">UserNameOrEmail</label>
+				<input type="text" asp-for="UserNameOrEmail" class="form-control form-white" placeholder="UserNameOrEmail">
+				<span asp-validation-for="UserNameOrEmail"></span>
+				<label asp-for="Password">Password</label>
+				<input asp-for="Password" class="form-control form-white" placeholder="Password">
+				<span asp-validation-for="Password"></span>
+@*				<div class="text-left">
+					<a href="#">Forgot Password?</a>
+				</div>*@
+
+				<label asp-for="IsRemembered">IsRemembered</label>
+				<input asp-for="IsRemembered"/>
+				<button type="submit" class="btn btn-submit">Submit</button>
+			</form>
+		</div>
+	</div>
+</div><!-- End modal -->   
