--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Category/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Category/Index.cshtml
@@ -23,7 +23,7 @@
                             <th scope="col">Name</th>
                             <th scope="col">Update</th>
                             <th scope="col">Soft Delete</th>
-                            <th><a asp-action="IndexSoftDeletes" asp-controller="Category" class="btn btn-success"><i class="fa fa-address-book"></i></a></th>
+                            <th><a asp-action="Arxiv" asp-controller="Category" class="btn btn-success"><i class="fa fa-address-book"></i></a></th>
 
                         </tr>
                     </thead>
