--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Restaurant/Arxiv.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Restaurant/Arxiv.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="col-xl-6">
+<div class="col-xl-12">
     <div class="card custom-card">
         <div class="card-header justify-content-between">
             <div class="card-title">
@@ -35,7 +35,7 @@
                                 <td>@(count++)</td>
                                 <td>
                                     <div class="thumb_strip">
-                                        <img src="~/assets/img/thumb_restaurant.jpg" height="100" width="100" alt="">
+                                        <img style="width:50px; height:50px" src="~/assets/img/restaurantImages/@item.Image" alt="">
                                     </div>
                                 </td>
                                 <td scope="row">@item.Name</td>
