--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Restaurant/Update.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Restaurant/Update.cshtml
@@ -13,8 +13,10 @@
         <div class="card-body d-flex">
             <div class="row gy-3 ">
                 <form class="row gy-3 " method="post" enctype="multipart/form-data">
-                    <img src="~/assets/img/restaurantImages/@Model.Image" height="130" width="130"/>
-                    <input asp-for="Image"/>
+                    <div class="col-xl-12">
+                        <img style="width:75px; height:75px" src="~/assets/img/restaurantImages/@Model.Image" alt="">
+                        <input asp-for="Image" type="hidden"/>
+                    </div>
                     <div class="col-xl-12">
                         <label asp-for="Photo" class="form-label">Photo</label>
                         <input asp-for="Photo" class="form-control" placeholder="Photo">
