--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -74,9 +74,7 @@
                             <a href="#element" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="far fa-gem purple_color"></i> <span>Elements</span></a>
                             <ul class="collapse list-unstyled" id="element">
                                 <li><a asp-action="Index" asp-controller="Category">> <span>Categories</span></a></li>
-                                <li><a href="media_gallery.html">> <span>Media Gallery</span></a></li>
-                                <li><a href="icons.html">> <span>Icons</span></a></li>
-                                <li><a href="invoice.html">> <span>Invoice</span></a></li>
+                                <li><a asp-action="Index" asp-controller="Restaurant">> <span>Restaurants</span></a></li>
                             </ul>
                         </li>
                         <li><a href="tables.html"><i class="fa fa-table purple_color2"></i> <span>Tables</span></a></li>
