New table wascreated

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Home/Index.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿    <!-- SubHeader =============================================== -->
+﻿ @model HomeVm
+  <!-- SubHeader =============================================== -->
 <section class="header-video">
     <div id="hero_video">
         <div id="sub_content">
@@ -88,142 +89,34 @@
             </p>
         </div>
         <div class="row">
-            <div class="col-lg-6">
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>Taco Mexican</h3>
-                        <div class="type">
-                            Mexican / American
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_check_alt2 ok"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant_2.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>Naples Pizza</h3>
-                        <div class="type">
-                            Italian / Pizza
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_check_alt2 ok"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant_3.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>Japan Food</h3>
-                        <div class="type">
-                            Sushi / Japanese
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_check_alt2 ok"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-            </div><!-- End col-md-6-->
-            <div class="col-lg-6">
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant_4.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>Sushi Gold</h3>
-                        <div class="type">
-                            Sushi / Japanese
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_close_alt2 no"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant_5.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>Dragon Tower</h3>
-                        <div class="type">
-                            Chinese / Thai
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_check_alt2 ok"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-                <a href="detail_page.html" class="strip_list">
-                    <div class="ribbon_1">Popular</div>
-                    <div class="desc">
-                        <div class="thumb_strip">
-                            <img src="~/assets/img/thumb_restaurant_6.jpg" alt="">
-                        </div>
-                        <div class="rating">
-                            <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
-                        </div>
-                        <h3>China Food</h3>
-                        <div class="type">
-                            Chinese / Vietnam
-                        </div>
-                        <div class="location">
-                            135 Newtownards Road, Belfast, BT4. <span class="opening">Opens at 17:00</span>
-                        </div>
-                        <ul>
-                            <li>Take away<i class="icon_check_alt2 ok"></i></li>
-                            <li>Delivery<i class="icon_check_alt2 ok"></i></li>
-                        </ul>
-                    </div><!-- End desc-->
-                </a><!-- End strip_list-->
-            </div>
+            @foreach (var item in Model.RestaurantItems)
+            {
+                <div class="col-lg-6">
+                    <a href="detail_page.html" class="strip_list">
+                        <div class="ribbon_1">Popular</div>
+                        <div class="desc">
+                            <div class="thumb_strip">
+                                <img src="~/assets/img/restaurantImages/@item.Image" alt="">
+                            </div>
+                            <div class="rating">
+                                <i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star voted"></i><i class="icon_star"></i>
+                            </div>
+                            <h3>@item.Name</h3>
+                            <div class="type">
+                                @Model.CategoryItems.FirstOrDefault(x=>x.Id==item.CategoryId)?.Name
+                            </div>
+                            <div class="location">
+                                @item.Address <span class="opening">@item.OpeningTime</span>
+                            </div>
+                            <ul>
+                                <li>Take away<i class="icon_check_alt2 ok"></i></li>
+                                <li>Delivery<i class="icon_check_alt2 ok"></i></li>
+                            </ul>
+                        </div><!-- End desc-->
+                    </a><!-- End strip_list-->
+                </div>
+            }
+            <!-- End col-md-6-->
         </div><!-- End row -->
     </div><!-- End container -->
 </div><!-- End white_bg -->
