--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Account/Register.cshtml
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/Views/Account/Register.cshtml
@@ -20,7 +20,7 @@
     <div class="wrapper" style="background-image: url('/identity/images/bg-registration-form-3.jpg');">
 
         <div class="inner">
-            <form action="" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly"></div>
                 <h3>Registration Form</h3>
                 <div class="form-group">
